# auth

./: .env.template  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 2024_11_14_0011-8462b2b125a0_create_auth_db.py
api/api_v1/: __init__.py  jwt_auth.py  users.py  utils.py  validation.py
auth-microservice/: .env.template  main.py
auth-microservice/alembic/: env.py
auth-microservice/api/api_v1/: __init__.py  jwt_auth.py  users.py  validation.py
auth-microservice/core/: config.py
auth-microservice/core/models/: auth.py  base.py
auth-microservice/core/schemas/: jwt.py  user.py
core/: config.py
core/models/: __init__.py  base.py  user.py
