[tool.poetry]
package-mode = false
name = "auth_service"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
bcrypt = "^4.2.0"
httpx = "^0.27.2"
python-multipart = "^0.0.17"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

